--- a/L12.1/src/main/resources/admin_page/finduser.html
+++ b/L12.1/src/main/resources/admin_page/finduser.html
@@ -6,11 +6,7 @@
 </head>
 <body>
 <div>
-    <img src="dao.jpg" alt="saveusers.png">
-    <br>
-</div>
-<div>
-    <h4>Search user</h4>
+    <h2>Find User by ID</h2>
     <form>
         <table border="0" cellspacing="2" cellpadding="1">
             <tr>
@@ -18,14 +14,14 @@
                 <td><input name="id" size="12" type="text" id="t" value="" maxlength="8"/></td>
             </tr>
             <tr>
-                <td><input type="submit" value="Search"
-                formaction="/admin_page/finduser" formmethod="post"/></td>
+                <td><input type="submit" value="Search" formaction="/admin_page/finduser" formmethod="post"/></td>
             </tr>
         </table>
     </form>
 </div>
 <div>
-    <h5><a href="index.html">Main page</a></h5>
+    <h4><a href="/admin_page">Admin page</a></h4>
+    <h4><a href="index.html">Main page</a></h4>
 </div>
 </body>
 </html>
